[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/World.gd" type="Script" id=1]
[ext_resource path="res://Scenes/levels/Levels/cementery_Level_01.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/UI/UI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/actors/player/player.tscn" type="PackedScene" id=6]

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="UI" parent="." instance=ExtResource( 3 )]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
smoothing_speed = 10.0

[node name="Level_01" parent="." instance=ExtResource( 2 )]
z_index = 0

[node name="player" parent="." instance=ExtResource( 6 )]

[node name="RemoteTransform2D" parent="player" index="7"]
remote_path = NodePath("../../Camera2D")

[connection signal="hit_next_level_door" from="player" to="." method="_on_player_hit_next_level_door"]
[connection signal="player_died" from="player" to="." method="_on_player_player_died"]

[editable path="player"]
[editable path="player/Hurtbox"]
